# steamos-atomupd

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  README.md  meson.build  meson_options.txt  mypy.ini  setup.py
ci/: docker.sh  prepare.sh
completions/: steamos-atomupd-client  steamos-atomupd-mkmanifest  steamos-atomupd-server
data/: meson.build  steamos-atomupd-server@.service.in  steamos-update-server@.service.in
debian/: .gitignore  changelog  control  copyright  rules  steamos-atomupd-client.install  steamos-atomupd-client.lintian-overrides  steamos-atomupd-common.lintian-overrides  steamos-atomupd-server.install  steamos-update-client.install  steamos-update-common.install  steamos-update-server.install
doc/: client.md  overview.md  server.md
examples/: add-another-image.sh  build-image-hierarchy.sh  client-qemu.conf  client.conf  image.manifest.json  manifest.image.json  server-daily.conf  server-releases-and-snaps-missing.conf  server-releases-and-snaps.conf  server-releases-and-snaps2.conf  server-releases-and-snaps3.conf  server-releases-and-snaps4.conf  server-releases-and-snaps5.conf  server-releases.conf  server-snapshots-stabler-consider.conf  server-snapshots.conf  update.json  utils.sh
examples/rauc/: steamos-holo-20220302.1005-3.1-amd64-steamdeck-main.raucb  steamos-holo-20220303.1-3.0-amd64-steamdeck-rc.raucb  steamos-holo-20220304.1000-3.2-amd64-steamdeck-main.raucb
steamosatomupd/: client.py  image.py  imagepool.py  manifest.py  mkmanifest.py  progress.bash  server.py  staticserver.py  update.py  utils.py
steamosupdate/: client.py  image.py  imagepool.py  images.py  manifest.py  server.py  update.py  updatefile.py  version.py
tests/: TODO.md  createmanifests.py  staticdaemonexpected  staticdaemonexpected_mock_leftover  staticdaemonexpected_mock_ndiff  test.md  testclient.py  testimage.py  testimagepool.py  testmkmanifest.py  teststaticserver.py  testupdate.py
tests/client_data/: 20211225_manifest.json  client.conf  update_loop.json  update_one_major.json  update_one_minor.json  update_same_version.json  (+4 more)
(+203 files in other folders)
